--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    
+    <input type="text" id="textInput" placeholder="Test">
     <script src="script.js" ></script>
 </body>
 </html>
