Converting base code to ES6 classes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <canvas id="canvas1"></canvas>
     <input type="text" id="textInput" placeholder="Test">
-    <script src="script.js" ></script>
+    <script src="scriptClasses.js" ></script>
 </body>
 </html>
